# TheLostVessel

./: .gitignore  Cargo.toml  README.md  adjectives  statement.md
assets/dialogs/: bear.dialog.ron  intro.dialog.ron  plant.dialog.ron  test.dialog.ron
assets/shaders/: forcefield.wgsl  perlin2d.wgsl
src/: asset_enum.rs  dialog.rs  forcefield.rs  main.rs  objects.rs  old.rs  paralax.rs  particles.rs  player.rs  tilemap.rs
src/dialog/: asset.rs  dialogs.rs  portrait.rs
