[package]
name = "space_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.11.3", features = ["dynamic_linking"]}
bevy-inspector-egui = "0.20.0"
bevy_hanabi = { version = "0.7.0", default-features = false, features = ["2d", "gpu_tests"] }
bevy_rapier2d = "0.22.0"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
