[package]
name = "space_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.12", features = ["dynamic_linking"]}
bevy-inspector-egui = {git = "https://github.com/jakobhellermann/bevy-inspector-egui.git"}
bevy-scene-hook = "9.0.0"
bevy_gltf_components = "0.1.3"
bevy_hanabi = { git = "https://github.com/djeedai/bevy_hanabi.git", default-features = false, features = ["2d", "gpu_tests"] }
bevy_rapier2d = {path = "../bevy_rapier/bevy_rapier2d"}
serde = {version = "1", features = ["derive"]}
ron = "0.8"
thiserror = "*"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
